--- a/guide/configuration.org
+++ b/guide/configuration.org
@@ -79,7 +79,7 @@
   #+BEGIN_SRC sh
     sudo pacman -S sway swaybg swayidle waybar foot rofi mako kanshi xorg-xwayland \
          polkit xdg-desktop-portal-wlr xdg-desktop-portal-gtk grim ttf-monoid-nerd \
-         wl-clipboard
+         wl-clipboard slurp
     paru pinentry-rofi wob
   #+END_SRC
 
