Run Emacs inside distrobox

--- a/system/systemd.org
+++ b/system/systemd.org
@@ -51,8 +51,8 @@
 
      [Service]
      Type=forking
-     ExecStart=/usr/bin/emacs --daemon
-     ExecStop=/usr/bin/emacsclient --eval "(kill-emacs)"
+     ExecStart=%h/.local/bin/emacs --daemon
+     ExecStop=%h/.local/bin/emacsclient --eval "(kill-emacs)"
      Environment=SSH_AUTH_SOCK=%t/keyring/ssh
      Restart=on-failure
 
