--- a/system/scripts.org
+++ b/system/scripts.org
@@ -66,3 +66,90 @@
         mv "$FILE".temp "$FILE"
     done
   #+END_SRC
+* COMMENT Password picker
+  :PROPERTIES:
+  :header-args: :tangle ~/bin/passpick :comments both :shebang "#!/bin/env bash" :mkdirp yes :noweb tangle
+  :END:
+  #+BEGIN_SRC sh
+    # ARG_OPTIONAL_BOOLEAN([login],[l],[copy login for given record])
+    # ARG_HELP([password picker])
+    # ARGBASH_GO()
+
+    shopt -s nullglob globstar
+
+    die()
+    {
+      local _ret="${2:-1}"
+      test "${_PRINT_HELP:-no}" = yes && print_help >&2
+      echo "$1" >&2
+      exit "${_ret}"
+    }
+
+
+    begins_with_short_option()
+    {
+      local first_option all_short_options='h'
+      first_option="${1:0:1}"
+      test "$all_short_options" = "${all_short_options/$first_option/}" && return 1 || return 0
+    }
+
+    # THE DEFAULTS INITIALIZATION - OPTIONALS
+    _arg_login="off"
+
+
+    print_help()
+    {
+      printf '%s\n' "password picker"
+      printf 'Usage: %s [--(no-)login] [-h|--help]\n' "$0"
+      printf '\t%s\n' "--login, --no-login: copy login for given record (off by default)"
+      printf '\t%s\n' "-h, --help: Prints help"
+    }
+
+
+    parse_commandline()
+    {
+      while test $# -gt 0
+      do
+	_key="$1"
+	case "$_key" in
+	  --no-login|--login)
+	    _arg_login="on"
+	    test "${1:0:5}" = "--no-" && _arg_login="off"
+	    ;;
+	  -h|--help)
+	    print_help
+	    exit 0
+	    ;;
+	  -h*)
+	    print_help
+	    exit 0
+	    ;;
+	  ,*)
+	    _PRINT_HELP=yes die "FATAL ERROR: Got an unexpected argument '$1'" 1
+	    ;;
+	esac
+	shift
+      done
+    }
+
+    parse_commandline "$@"
+
+    prefix=${PASSWORD_STORE_DIR-~/.password-store}
+    password_files=( "$prefix"/**/*.gpg )
+    password_files=( "${password_files[@]#"$prefix"/}" )
+    password_files=( "${password_files[@]%.gpg}" )
+
+    password=$(printf '%s\n' "${password_files[@]}" | fuzzel -d)
+
+    [[ -n $password ]] || exit
+
+    echo "$_arg_login"
+    echo [ "$_arg_login" == "off" ]
+
+    if [ "$_arg_login" = "off" ]; then
+      pass show -c "$password" 2>/dev/null
+      cliphist list | head -n 1 | cliphist delete
+    else
+      pass show "$password" | grep login | awk '{print $2}' | wl-copy
+    fi
+  #+END_SRC
