--- a/wm/sway.org
+++ b/wm/sway.org
@@ -129,10 +129,21 @@
    #+BEGIN_SRC conf
          bindsym $mod+Shift+s exec sh ~/.config/swaylock/lock.sh
    #+END_SRC
-** App launcher
-   start your app launcher
+** Pickers
+   start app launcher
    #+BEGIN_SRC conf
          bindsym $mod+f1 exec fuzzel
+   #+END_SRC
+
+   open password picker
+   #+BEGIN_SRC conf
+         bindsym $mod+f2 exec passpick
+         bindsym $mod+Shift+f2 exec passpick --login
+   #+END_SRC
+
+   browse clipboard history
+   #+BEGIN_SRC conf
+         bindsym $mod+f3 exec cliphist list | fuzzel -d | cliphist decode | wl-copy
    #+END_SRC
 ** Moving around
    Move your focus around
@@ -197,6 +208,7 @@
          bindsym $mod+Shift+8 move container to workspace number 8
          bindsym $mod+Shift+9 move container to workspace number 9
          bindsym $mod+Shift+0 move container to workspace number 10
+         bindsym $mod+Shift+space move container to output right
    #+END_SRC
    Note: workspaces can have any name you want, not just numbers.
    We just use 1-10 as the default.
